--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,14 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/oasysinternationalcorporation89/jobs/1935507'>Job Application for Senior Full-Stack Developer at Oasys International Corporation</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698400223-developpeur-full-stack-h-f'>onepoint D?veloppeur Full-Stack H/F | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">France</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://www.fitzii.com/job/44483?s=ft'>Jr Full Stack Engineer | Walden Local Meat Co.</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
@@ -66,7 +74,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/dUKcqFnbgP/Full-Stack-Cloud-Engineer'>Full Stack Cloud Engineer - Latitude, Inc. - Career Page</a></h5> 
+<h5><a href='http://latitudeinc.applytojob.com/apply/dUKcqFnbgP/Full-Stack-Cloud-Engineer'>Full Stack Cloud Engineer - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -82,7 +90,7 @@
 <p><span class="badge badge-light">Gurugram, Haryana</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1917995'>Job Application for Principal Full Stack Engineer at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1917995'>Job Application for Principal Full Stack Engineer at Coupang</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -122,7 +130,7 @@
 <p><span class="badge badge-light">Lausanne, Switzerland  Lausanne, Switzerland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://fincite.join.com/jobs/460128-full-stack-developer-m-f-d'>Job @ Fincite (Frankfurt): Full Stack Developer (m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://fincite.join.com/jobs/460128-full-stack-developer-m-f-d'>Job @ Fincite (Frankfurt): Full Stack Developer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -231,7 +239,7 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://avesdo.applytojob.com/apply/JGAs8qYIdg/Senior-Full-Stack-Developer'>Senior Full Stack Developer - Avesdo - Career Page</a></h5> 
+<h5><a href='http://avesdo.applytojob.com/apply/JGAs8qYIdg/Senior-Full-Stack-Developer'>Senior Full Stack Developer - Avesdo - Career Page</a></h5> 
 <p><span class="badge badge-light">Toronto, ON, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -328,7 +336,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jellysmack.recruitee.com/l/en/o/developpeur-fullstack-hf-cdi'>
+<h5><a href='https://jellysmack.recruitee.com/l/en/o/developpeur-fullstack-hf-cdi'>
       D?veloppeur Full-Stack H/F - CDI - Jellysmack
     </a></h5> 
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
@@ -426,7 +434,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oviva.recruitee.com/o/full-stack-software-engineer'>
+<h5><a href='https://oviva.recruitee.com/o/full-stack-software-engineer'>
       Full Stack Software Engineer - Oviva
     </a></h5> 
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
@@ -462,14 +470,6 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <hr/>
 <h5><a href='http://claritypartnersllc.applytojob.com/apply/RSwdZ1otBa/FullStack-Java-Developer'>Full-Stack Java Developer - Clarity Partners, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oZyQafwh&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n7rllMwv'>Freedom Financial Network Careers - Full Stack Developer (Platform)</a></h5> 
-<p><span class="badge badge-light">San Mateo, California  Tempe, Arizona</span></p>
-<p>Posted on:: 2019-10-27</p>
-<hr/>
-<h5><a href='http://farmersfridge.applytojob.com/apply/A3BwgOUDJn/Sr-Full-Stack-Engineer'>Sr. Full Stack Engineer - Farmer's Fridge - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
 
